* 迭代器模式-示例-数组对比

--- a/design-pattern/iterator/example-simple-iterator.html
+++ b/design-pattern/iterator/example-simple-iterator.html
@@ -16,7 +16,7 @@
   each([1, 2, 3, 4, 5], (i, n) => console.log(i, n));
 
   // --------------------------------------------------
-
+  // 简单对比，可引申至对象对比
   const compare = function (ary1, ary2) {
     if(ary1.length !== ary2.length){
       throw new Error('ary1与ary2不相等');
