feat(design-pattern): some examples are executed using nodejs

--- a/design-pattern/command/redio&cancel.html
+++ b/design-pattern/command/redio&cancel.html
@@ -33,7 +33,7 @@
 
     const commandStack = []; // 保存命令的堆栈
     document.onkeypress = function (ev) {
-      console.log()
+      console.log('33')
       const keyCode = ev.keyCode,
         command = makeCommand(Ryu, commands[keyCode]);
       if (command) {
